@@ -167,7 +167,7 @@ summaryPlot <- function(mydata,
     ylab <- if("ylab" %in% names(extra.args))
                 extra.args$ylab else NULL
     main <- if("main" %in% names(extra.args))
-                extra.args$main else ""
+                extra.args$main else NULL
 
     #drop main, xlab, ylab from extra.args
     extra.args <- extra.args[!names(extra.args) %in% c("xlab", "ylab", "main")]
@@ -387,7 +387,12 @@ summaryPlot <- function(mydata,
     #plot
     plt1 <- do.call(xyplot, xyplot.args)
 
-    print(plt1, position = c(0, 0, 0.7, 1), more = TRUE)
+    ## this adjusts the space for the title to 2 lines (approx) if \n in title
+    if (!is.null(main)) main <- quickText(main, auto.text)
+    if (length(grep("atop", main) == 1)) y.upp <- 0.95 else y.upp <- 0.975
+    if (is.null(main)) y.upp <- 1
+
+    print(plt1, position = c(0, 0, 0.7, y.upp), more = TRUE)
 
     ## clip data to help show interesting part of distribution
     if (clip) {
@@ -458,14 +463,14 @@ summaryPlot <- function(mydata,
         plt2 <- densityplot()
     }
 
-    print(plt2, position = c(0.7, 0, 1, 0.975))
+    print(plt2, position = c(0.7, 0, 1, 0.975 * y.upp))
 
     #reset if greyscale
     if (length(cols) == 1 && cols == "greyscale")
         trellis.par.set("strip.background", current.strip)
 
     ## use grid to add an overall title
-    grid.text(quickText(main, auto.text), 0.5, 0.975, gp = gpar(fontsize = 14))
+    grid.text(main, 0.5, y.upp, gp = gpar(fontsize = 14))
 
 }
 
