@@ -4,13 +4,15 @@ Changes in openair 0.6-0 [2012-04-10]
 *	Fix interpolation bug in calcFno2 and names in documentation.
 *	Refine conditionalQuantile scales
 *	Provide volatile and non-volatile components for FDMS PM10 and
-	PM2.5 in importKCL - now consistent with importAEA
+	PM2.5 in importKCL - now consistent with importAURN
 *	NEW FUNCTION conditionalEval for model evaluation - allows
 	other variable performance to be assessed.
 *	Make lattice strips white by default for cleaner look on
 	complicated plots
 *	Complete re-write of import to simplify - changes are NOT
 	backward compatible but will allow more developments
+*	Allow line breaks in titles using \n to work woth quickText
+	- thanks to Karl
 
 Changes in openair 0.5-25 [2012-03-16]
 =====================================
